src/assets/scss/_navbar.scss
// required here because the output of this file (navbar.css) is used for login.index.html as well still
@import "variables";

body > .container {
	min-height: 100%;
	position: relative;
}

.content {
	min-height: 100%;
	position: relative;
	padding-top: 70px;
}

// navheader includes navbar as well as banners
#navheader {
    z-index: 1037;
    position: relative; // for z-index to work, position must be non-static
}

// default modal z-index is 1050 (for the first modal)
// as more modals get opened, z-index increases by 10 for each modal (1060, 1070, ...)
// we tried to be safe about it before by increasing it by only 1
.modal-login #navheader, .error-open #navheader {
    z-index: 1501;
}

.navbar-inverse {
    background-color: #000;
    border-color: #000;
}

.navbar-inverse .navbar-nav > div > a {
   color: #C1C1C1;
}

.navbar-inverse .navbar-nav.navbar-right > div > a{
   color: #59C4FF;
}

.navbar-inverse .navbar-brand {
    color: #59C4FF;
    float: left;
    height: 50px;
    padding: 15px 15px;
    font-size: 18px;
    line-height: 20px;
    margin-right: 0px;
}

#live-btn {
    margin-right: 0px; // offset marging-right: -15px from navbar-right
    color: #59C4FF;
    padding: 15px;
    text-decoration: none;

    &:hover {
        text-decoration: underline;
    }
}

.navbar-inverse .navbar-nav.navbar-right > div > a:hover{
   color: #FFF;
}

.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
	border-color: #4D4D4D;
}

.navbar-inverse .navbar-nav > .active > a, 
.navbar-inverse .navbar-nav > .active > a:hover, 
.navbar-inverse .navbar-nav > .active > a:focus {
	background-color: #4D4D4D;
}

.navbar-inverse .navbar-text {
	color: #FFF;
}

.navbar-inverse .navbar-toggle {
    border-color: #fff;
	color: #fff;
}

.navbar .navbar-nav .disable-link {
    pointer-events: none;
    cursor: default;
    color: $disabled-color;
}

// positioning of searh box in navbar
.rid-search {
    margin-right: 0px; // offset marging-right: -15px from navbar-right

    .chaise-search-box {
        padding: 13px 15px;
    }

    .chaise-input-control-sm {
        width: 100px;
        border-color: $black-color;
        border-radius: 4px 0px 0px 4px;
    }

    .chaise-search-btn .glyphicon-refresh {
        color: white;
    }
}

#rid-search-input {
    background-color: $table-striped-background-color;
}

#mainnav {
    border-radius: 0;
}

.navbar {
    margin-bottom: 0;
    padding: 0px 5px 0px 20px;
    min-height: 50px;
    flex-wrap: nowrap;
}

// div replaces li, a is the case with no dropdown
.navbar-menu-options>div,
.navbar-menu-options>a {
    position: relative;
    display: block;
}

.navbar .navbar-nav .nav-link {
    position: relative;
    display: block;
    padding: 15px 15px !important; // so the property overrides a more specific rule from bootstrap
    line-height: 20px;
    color: #C1C1C1;
}

.chaise-navbar-banner-container {
    margin-bottom: 0;
    padding: 10px 20px 10px 20px;
    background-color: #f9e3a1;
    text-align: center;

    // use the normal font instead of light and make it bigger
    font-family: "Helvetica Neue", Helvetica , Arial, sans-serif;
    letter-spacing: 1px;
    font-weight: 500;
    font-size: 16px;

    .close {
        padding-right: 15px;

        // button.close from close.less:32
        -webkit-appearance: none;
        padding: 0;
        cursor: pointer;
        background: 0 0;
        border: 0;
    
        // close from close.less:11
        float: right;
        font-size: 21px;
        font-weight: 700;
        line-height: 1;
        color: #000;
        text-shadow: 0 1px 0 #fff;
        filter: alpha(opacity=20);
        opacity: .2;
    }
}


/* This value is in bootstrap for navbar-collapse but it isn't getting applied so its been added here */
.navbar-collapse {
    max-height: 340px;
}

/*
modify the behavior of dropdown menu for navbar
we have to wrap all the rules in navbar specific tag, otherwise all the
dropdowns in bootstrap will be affected.
ideally most of the other rules in this file should be wrapped in this tag,
but since custom-css rules are written based on that, I didn't change them.
TODO we should be able to simplify the rules and also investigate whether
     we want to move other rules to be in this wraper.
*/
nav.navbar {
    .dropdown-menu>li>a.chaise-dropdown-header,
    .dropdown-menu>li>div>div>a.chaise-dropdown-header,
    .chaise-dropdown-header {
        padding: 3px 15px 3px 15px;
        cursor: default;
        font-size: $font-size;
        color: $black-color;
        font-weight: 600;
    }

    .navbar-nav .chaise-dropdown-header {
        color: $border-color;
    }

    .dropdown-submenu {
        position: relative;
    }

    .dropdown-submenu>.dropdown-menu,
    .dropdown-submenu>div>div>.dropdown-menu {
        // TODO: why is this here? Maybe to fix positioning of menus for scrolling?
        // position: fixed;
        margin-top: -6px;
        margin-left: -1px;
        -webkit-border-radius: 0 6px 6px 6px;
        -moz-border-radius: 0 6px 6px;
        border-radius: 0 6px 6px 6px;
    }

    .dropdown-submenu>a:after,
    .dropdown-submenu>div>div>a:after {
        display: flex;
        content: " ";
        float: right;
        width: 0;
        height: 0;
        border-color: transparent;
        border-style: solid;
        border-width: 6px 0 6px 6px; /* was 5px 0 5px 5px */
        border-left-color: #428bca; /* was #ccc */
        // to center
        margin: auto;
        margin-right: -15px;
        padding-right: 10px;
        margin-left: 10px;
    }

    .dropdown-submenu:hover>a:after,
    .dropdown-submenu:hover>div>div>a:after {
        border-left-color: #777; /* was #fff */
    }

    .dropdown-submenu.pull-left {
        float: none;
    }

    .dropdown-submenu.pull-left>.dropdown-menu,
    .dropdown-submenu.pull-left>div>div>.dropdown-menu {
        left: -100%;
        margin-left: 10px;
        -webkit-border-radius: 6px 0 6px 6px;
        -moz-border-radius: 6px 0 6px 6px;
        border-radius: 6px 0 6px 6px;
    }

    // Dummy selector to keep the same amount of space as submenu arrow
    .dropdown-menu > .dropdown-submenu + li > a::after,
    .dropdown-menu > .dropdown-submenu + li > div > div > a::after {
        content: " ";
        height: 12px;
        width: 12px;
        margin-left: 10px;
    }

    /*Adding the scroll bar to the menu */
    .navbar-nav div.dropdown-menu {
        min-height: 30px;
        // TODO: add scrollbar for y back
        // overflow-x: hidden;
        // overflow-y: auto;
        width: max-content;
        max-width: 450px;
        
        // setting max height for submenus
        max-height: 50vh;
        overflow-y: scroll;
    }

    .dropdown .dropdown-toggle,
    .dropdown a {
        text-decoration: none;
    }

    // bootstrap adds css "borders" before element with .dropstart
    .dropstart .dropdown-toggle::before {
        content: none;
    }
    // .dropdown .dropdown-toggle::after {
    //     border-top: 5px solid;
    //     border-right: 5px solid transparent;
    //     border-left: 5px solid transparent;

    //     margin-left: 5px;
    //     vertical-align: middle;
    // }

    .dropdown-menu {
        // To keep it more compact
        min-width: 100px;
        padding: 5px 0;
    }

    // style to override react-bootstrap
    .dropdown-item {
        padding: 0;
    }

    .dropdown-menu > a,
    .dropdown-menu > div > a{
        white-space: normal;
        cursor: pointer;
        display: flex;
        justify-content: space-between;
        color: #333;
        margin-bottom: 2px;
        padding: 3px 15px 3px 15px;
        line-height: 1.4;

        &:focus,
        &:hover {
            color: #262626;
            text-decoration: none;
            background-color: #f5f5f5;
        }
    }

    .dropdown-menu>li.dropdown-header-container ~ li:not(.dropdown-header-container)>a,
    .dropdown-menu>li.dropdown-header-container ~ li:not(.dropdown-header-container)>div>div>a {
        padding-left: 22px;
    }

    // override bootstrap rule that didn't include '>' so dropstart alway overrode dropend if both present on different elements
    .dropstart>.dropdown-menu[data-bs-popper] {
        top: 0;
        right: 100%;
        left: auto;
        // margin-top: 0;
        // margin-right: 0.125rem;
        margin: -1px;
    }

    .dropend>.dropdown-menu[data-bs-popper] {
        top: 0;
        right: auto;
        left: 100%;
        // margin-top: 0;
        // margin-left: 0.125rem;
        margin: -1px;
    }

    // Vertical navbar
    @media (max-width: 768px) {
        .child-opened > ul {
            padding-left: 3%;
        }
        // !important is hacky but had to be used as we override width via js for horizontal navbar and this gets overriden too
        .dropdown-menu,
        .navbar-nav ul.dropdown-menu,
        .dropdown-menu > li > a,
        .dropdown-menu > li > div > div > a {
            max-width: none !important;
            width: auto !important;
        }

    }

    // Horizontal navbar
    @media (min-width: 768px) {
        .child-opened {
            background-color: $table-header-background-color;
        }
        .navbar-header {
            float: left;
        }

        .navbar-nav {
            float: left;
            margin: 0;

            &.navbar-menu-options {
                margin-right: auto;
            }

            li {
                float: left;

                a {
                    padding-top: 15px;
                    padding-bottom: 15px;
                }
            }
        }
    }
}

